= Version 2.7.1 = *   Added some exception handling to cope slightly more gracefully with any "bad" dates in the ics file. *  titles have been added to the little images. *   Fixed a bug that occurred if you had one timezone in your wp and another in the ics file events and had recurring entries that went over a daylight saving change in the files. Recurring events will now have their repeats generated in the original timezone and then converted to the display timezone, not the other way around. *   Updated the default css, so that text will align at the top of the table cells in the new twentyten default theme.
git-svn-id: https://plugins.svn.wordpress.org/amr-ical-events-list/trunk@243098 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/icallist27.css
+++ b/icallist27.css
@@ -1,4 +1,4 @@
-/* AmRiCal Default Style for first calendar on page - version 2.7.1
+/* AmRiCal Default Style for first calendar on page - version 2.5.11
 
 DO NOT EDIT THIS FILE - It may be overwritten by an upgrade.  Rather copy over to your file,.
 In the configuration, you can specify your own css file for the plugin to use (A copy may already have been created for you)
@@ -25,11 +25,6 @@ then you will need to add css for any further calendars - simply copy the comppr
 	border-collapse:collapse;  /* required to get the today rown border styling loooking good  */
 	border: none;
 }
-
-.ical td {
-	vertical-align: top;
-}
-
 
 .ical tr.today td {  /* style today's events differently perhaps? */
 	border-top: 2px solid !important;
